<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Lab2 resources-->

    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="FirstMessage">Here are my widgets:</string>
    <string name="SecondMessage">Button</string>
    <string name="ThirdMessage">Check this out!</string>
    <string name="FourthMessage">Switch on / off</string>
    <string name="FifthMessage">Type your answer here</string>

    <!--Lab3 resources-->

    <string name="TextViewEmailMessage">Enter your email address:</string>
    <string name="EditTextEmailHintMessage">Type email here</string>
    <string name="TextViewPasswordMessage">Type your password:</string>
    <string name="EditPasswordHintMessage">Type password here</string>
    <string name="EnterButtonMessage">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="TextViewProfileMessage">Your Profile</string>
    <string name="TextViewNameMessage">Your Name:</string>
    <string name="EditNameHintMessage">Enter Your Name</string>
    <string name="TextViewPictureMessageT">Your Picture:</string>

    <!--Lab3 resources-->

    <string name="r9Button">Go to chat</string>

    <string name="TextViewPictureMessageB">Click the button above to take a picture</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>

    <!--Lab4 resources-->
    <string name="SendButtonMessage">Send</string>
    <string name="app_chat_room_text_suggestion">Type here</string>
    <string name="ReceiveButtonMessage">Receive</string>

</resources>