<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <!-- Row1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ap_rn1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewProfileMessage"
            />
    </LinearLayout>
    <!-- Row2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ap_r2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewNameMessage"
            />
    </LinearLayout>
    <!-- Row3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ap_r3EitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditNameHintMessage"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <!-- Row4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ap_r4TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewEmailMessage"
            />
    </LinearLayout>
    <!-- Row5-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ap_r5EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditTextEmailHintMessage"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <!-- Row6-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ap_r6TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewPictureMessageT"
            />
    </LinearLayout>
    <!-- Row7-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ap_r7Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill"
            android:textAlignment="center"
            android:src="@android:drawable/picture_frame"/>

    </LinearLayout>
    <!-- Row8-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ap_r8TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewPictureMessageB"
            />
    </LinearLayout>
    <!-- Row9-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ap_r9Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r9Button"
            />
    </LinearLayout>




</LinearLayout>