<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >
    <!-- Row1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/r1_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewEmailMessage"
            />
    </LinearLayout>
    <!-- Row2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/r2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditTextEmailHintMessage"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <!-- Row3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/r3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewPasswordMessage"
            />
    </LinearLayout>
    <!-- Row4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/r4EitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditPasswordHintMessage"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <!-- Row5-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/r5Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/EnterButtonMessage"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>